--- a/flexbox.html
+++ b/flexbox.html
@@ -7,8 +7,14 @@
     <style>
         .container{
             border: 1px dotted rgb(9, 15, 9);
+            display: flex;
+            justify-content: space-evenly;
+            height: 300px;
+            align-items: center;
         }
         .box{
+            font-size: 30px;
+            font-weight: 700;
             width: 150px;
             height: 150px;
             border: 1px dashed red;
